add architecture-agnostic dmg
this dmg does not include JRE but rather uses the JRE
that is available on the machine.

to achieve this, we added gradle-macappbundle back with
the changes in:
https://github.com/crotwell/gradle-macappbundle/pull/76